# wapp_books_manager

./: .gitignore  README.md
backend/: Cargo.toml  build.rs
backend/src/: main.rs
flask/: app.py  config.py  old.md  requirements.txt  start_debug.sh
flask/static/: styles.css
flask/static/pages/: books.js  storage.js
flask/static/pdfjs/: viewer.js
flask/templates/: books_edit.html  books_list.html  books_show.html  layout.html  storage_edit.html  storage_list.html  storage_show.html
frontend/: README.md  package-lock.json  package.json
frontend/public/: styles.css
frontend/public/assets/pdfjs/: viewer.js
frontend/src/: App.vue  main.js
frontend/src/router/: index.js
frontend/src/views/: BooksListView.vue
