[package]
name = "generate-resources-mapping"
version = "0.1.0"
authors = ["Alexander Korolev <alexander.korolev.germany@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "4.0"
actix-web-static-files = "4.0"
static-files = "0.2.1"
chrono = { version = "0.4.11", features = ["serde"] }
diesel = { version = "1.4.4", features = ["sqlite", "uuidv07", "r2d2", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
r2d2 = "0.8.8"
r2d2-diesel = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }

[build-dependencies]
static-files = "0.2.1"
